# tensorRT_Pro

./: .gitignore  .gitmodules  CMakeLists.txt
amirstan_plugin/: update_amirstan.sh
amirstan_plugin/src/plugin/meshGridPlugin/: CMakeLists.txt  meshGridPlugin.cpp  meshGridPlugin.h  mesh_grid.cu
src/: main.cpp
src/app/: app.cpp  app.hpp  detection.cpp  detection.h  pre_processing.cpp  pre_processing.h
src/tensorRT/amirstan_plugin/src/plugin/meshGridPlugin/: mesh_grid.h
src/tensorRT/common/: ilogger.hpp
src/tensorRT/infer/: trt_infer.cpp  trt_infer.hpp
test/: base_test.cpp  benchmark.cpp  detection_app_test.cpp  plugin_parser_test.cpp
windows/: TensorRT.vcxproj  TensorRT.vcxproj.filters
windows/onnx_parser/: use_tensorrt_7.x.sh  use_tensorrt_8.x.sh
windows/onnx_parser/onnx_parser_7.x/: ShapeTensor.cpp
windows/src/: main.cpp
windows/src/app/: app.cpp  app.hpp  detection.cpp  detection.h  pre_processing.h
windows/src/tensorRT/amirstan_plugin/include/amir_cuda_util/: cuda_util.h  cudnn_util.h
windows/src/tensorRT/amirstan_plugin/include/plugin/: amirInferPlugin.h
windows/src/tensorRT/amirstan_plugin/src/: CMakeLists.txt
windows/src/tensorRT/amirstan_plugin/src/amir_cuda_util/: memcpyPermute.cu  reduceUtils.cuh
windows/src/tensorRT/amirstan_plugin/src/plugin/: CMakeLists.txt  InferPlugin.cpp
windows/src/tensorRT/amirstan_plugin/src/plugin/adaptivePoolPlugin/: adaptivePoolPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/batchedNMSPlugin/: batchedNMSInference.cpp
windows/src/tensorRT/amirstan_plugin/src/plugin/carafeFeatureReassemblePlugin/: carafeFeatureReassemblePlugin.cpp  carafeFeatureReassemblePlugin.h  carafe_cuda.h  carafe_cuda_kernel.cu
windows/src/tensorRT/amirstan_plugin/src/plugin/common/: amirCommon.h  common.h
windows/src/tensorRT/amirstan_plugin/src/plugin/deformableConvPlugin/: deform_conv_cuda.cpp  deform_conv_cuda.h  deform_conv_cuda_kernel.cu  deformableConvPlugin.cpp  deformableConvPlugin.h  modulatedDeformableConvPlugin.cpp  modulatedDeformableConvPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/deformablePoolPlugin/: deformablePoolPlugin.cpp  deformablePoolPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/delta2bboxPlugin/: delta2bbox.cu  delta2bboxPlugin.cpp  delta2bboxPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/gridAnchorDynamicPlugin/: gridAnchorDynamicPlugin.cpp  grid_anchor_dynamic.cu  grid_anchor_dynamic.h
windows/src/tensorRT/amirstan_plugin/src/plugin/gridSamplePlugin/: gridSamplePlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/groupNormPlugin/: groupNormPlugin.cpp  groupNormPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/meshGridPlugin/: CMakeLists.txt  meshGridPlugin.cpp  meshGridPlugin.h  mesh_grid.cu  mesh_grid.h
windows/src/tensorRT/amirstan_plugin/src/plugin/roiExtractorPlugin/: roiExtractorPlugin.cpp  roiExtractorPlugin.h  roi_extractor_kernel.cu
windows/src/tensorRT/amirstan_plugin/src/plugin/roiPoolPlugin/: roiPoolPlugin.cpp  roiPoolPlugin.h  roi_pool_kernel.cu
windows/src/tensorRT/amirstan_plugin/src/plugin/torchBmmPlugin/: torchBmmPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/torchCumMaxMinPlugin/: torchCumMaxMinPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/torchCumPlugin/: torchCumPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/torchGatherPlugin/: torchGatherPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/torchNMSPlugin/: torchNMSPlugin.h
windows/src/tensorRT/amirstan_plugin/src/plugin/torchUnfoldPlugin/: torchUnfoldPlugin.h
windows/src/tensorRT/common/: ilogger.hpp  trt_tensor.cpp
windows/src/tensorRT/infer/: trt_infer.cpp  trt_infer.hpp
windows/src/tensorRT/onnx_parser/: onnx2trt_utils.cpp
windows/test/: base_test.cpp  benchmark.cpp  detection_app_test.cpp  main.cpp  plugin_parser_test.cpp
